@@ -561,6 +561,11 @@ check_nb_options_out_of_sync(
         return true;
     }
 
+    if (config_out_of_sync(&nb->options, &config_data->nb_options,
+                           "ecmp_nexthop_monitor_en", false)) {
+        return true;
+    }
+
     return false;
 }
 
