@@ -412,6 +412,15 @@
         </p>
       </column>
 
+      <column name="options" key="ecmp_nexthop_monitor_en">
+        <p>
+          If set to <code>true</code>., <code>ovn-northd</code> will create
+          entries in <ref table="ECMP_Nexthop TABLE" db="OVN_Southbound"/>
+          to track ECMP routes created with <code>--ecmp_symmetric_reply</code>
+          option.  By default this option is set to <code>false</code>.
+        </p>
+      </column>
+
       <group title="Options for configuring interconnection route advertisement">
         <p>
           These options control how routes are advertised between OVN
